Background label is not rendrawed #40435

Closed
opened 2014-05-30 09:01:19 +02:00 by Cenek Strichel · 9 comments

System Information
W8.1 64b, GF 770

Blender Version
06a05e4

Short description of error
If you drag image from texture to viewport there is Help label, but when you press CTRL it is not redraw until you will move mouse, same is opposite when you stop press CTRL.

bug1.png

**System Information** W8.1 64b, GF 770 **Blender Version** 06a05e4 **Short description of error** If you drag image from texture to viewport there is Help label, but when you press CTRL it is not redraw until you will move mouse, same is opposite when you stop press CTRL. ![bug1.png](https://archive.blender.org/developer/F91940/bug1.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Sergey Sharybin self-assigned this 2014-05-30 11:08:15 +02:00

Just for the record, we've committed fixes which are needed from drag-n-drop area, but there are some oeprators which doesn't check for ctrl button properly. It's quite dangerous to change things so close to the release, we'll solve it soon after 2.71 release.

Just for the record, we've committed fixes which are needed from drag-n-drop area, but there are some oeprators which doesn't check for ctrl button properly. It's quite dangerous to change things so close to the release, we'll solve it soon after 2.71 release.
Sergey Sharybin removed their assignment 2014-11-04 18:12:39 +01:00
Julian Eisel was assigned by Sergey Sharybin 2014-11-04 18:12:39 +01:00

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

@JulianEisel might want to look into the issue. It's a nice puzzle f solving keyboard events :)

@JulianEisel might want to look into the issue. It's a nice puzzle f solving keyboard events :)
Member

Had a deeper look at this today, and came up with D933 as a proper fix.

Had a deeper look at this today, and came up with [D933](https://archive.blender.org/developer/D933) as a proper fix.

This issue was referenced by eefb393cfd

This issue was referenced by eefb393cfdce8df10d704a368696fe21c1e951ae
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit eefb393cfd.

Closed by commit eefb393cfd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40435
No description provided.