Change to key modifier should trigger re-evaluation of drag-and-drop

This change is part of a fix for T40435, but will postpone for now.

Original patch by Sergey Sharybin